some adaptive added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         </nav>
         <a href="" class="btn btn--sm">Заказать демо</a>
     </div>
+    <button class="burger" type="button">
+        <span>Menu</span>
+    </button>
 </header><!--/.Header-->
 <div class="intro">
     <div class="container-2">
