--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <button class="btn btn--light">Подробнее</button>
         </div>
         <div class="intro-img">
-            <img class="intro-img__main" src="/img/intro-main.png" alt="">
-            <img class="intro-img__bottom" src="/img/intro-bottom.png" alt="">
+            <img class="intro-img__main" src="img/intro-main.png" alt="">
+            <img class="intro-img__bottom" src="img/intro-bottom.png" alt="">
         </div>
     </div>
 </div><!-- /. Intro-->
