--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div class="improvements-blocks">
             <div class="improvements-block">
                 <div class="improvements-block__img">
-                    <img class="improvements-block__img-wrapper" src="./img/improve-wrapper-1.svg" alt="">
-                    <img class="improvements-block__img-vector" src="./img/improve-vector-1.svg" alt="">
+                    <img class="improvements-block__img-wrapper" src="img/improve-wrapper-1.svg" alt="">
+                    <img class="improvements-block__img-vector" src="img/improve-vector-1.svg" alt="">
                 </div>
                 <h4 class="improvements-block__title">Повышение эффективности</h4>
                 <div class="improvements-block__txt">
@@ -64,8 +64,8 @@
             </div>
             <div class="improvements-block">
                 <div class="improvements-block__img">
-                    <img class="improvements-block__img-wrapper" src="./img/Vectorimprove-wrapper-2.svg" alt="">
-                    <img class="improvements-block__img-vector" src="./img/Vectorimprove-vector-2.svg" alt="">
+                    <img class="improvements-block__img-wrapper" src="img/Vectorimprove-wrapper-2.svg" alt="">
+                    <img class="improvements-block__img-vector" src="img/Vectorimprove-vector-2.svg" alt="">
                 </div>
                 <h4 class="improvements-block__title">Снижение потерь</h4>
                 <div class="improvements-block__txt">
@@ -74,8 +74,8 @@
             </div>
             <div class="improvements-block">
                 <div class="improvements-block__img">
-                    <img class="improvements-block__img-wrapper" src="./img/Vectorimprove-wrapper-3.svg" alt="">
-                    <img class="improvements-block__img-vector" src="./img/improve-vector-3.svg" alt="">
+                    <img class="improvements-block__img-wrapper" src="img/Vectorimprove-wrapper-3.svg" alt="">
+                    <img class="improvements-block__img-vector" src="img/improve-vector-3.svg" alt="">
                 </div>
                 <h4 class="improvements-block__title">Повышение безопасности</h4>
                 <div class="improvements-block__txt">
